test/classes/vass/generic-var-const-field-error.good
generic-var-const-field-error.chpl:5: error: unresolved call 'C.init()'
generic-var-const-field-error.chpl:1: note: this candidate did not match: C.init(cst)
generic-var-const-field-error.chpl:5: note: because call does not supply enough arguments
generic-var-const-field-error.chpl:2: note: it is missing a value for formal 'in cst'
